renamed the package and added package keywords

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "filterer",
-	"description": "A dead simple filter chain for running multiple filters on an input value.",
+	"name": "digitaledgeit-filter-chain",
+	"description": "A simple filter chain for running multiple filters on an input value.",
+	"keywords": ["filter", "filter-chain", "input-filter", "chain", "validate", "input", "validator"],
 	"repository" : {
 		"type": "git",
 		"url": "https://github.com/jameslnewell/js-filterer.git"
